--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,48 @@ services:
       - "80:80"
     volumes:
       - ./src:/var/www/html
+    depends_on:
+      - db
+      - redis
+    networks:
+      - global
+
+  db:
+    platform: linux/x86_64
+    image: mysql:5.7
+    volumes:
+      - ./db_data:/var/lib/mysql
+    restart: always
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: my_db
+      MYSQL_PASSWORD: password
+    networks:
+      - global
+
+  phpmyadmin:
+    depends_on:
+      - db
+    image: phpmyadmin
+    restart: always
+    ports:
+      - "8888:80"
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: password
+    networks:
+      - global
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    command: '--requirepass your_redis_password'
+    networks:
+      - global
+
+
+networks:
+  global:
